refactor yaml, test adjustments